Fixed some layout issues on the product detail page

--- a/style.css
+++ b/style.css
@@ -120,8 +120,8 @@ h2 {
 
 /* Creating a container to stay away from margins */
 .container-tight {
-  margin-left: 12.5%;
-  margin-right: 12.5%;
+  margin-left: 20%;
+  margin-right: 0%;
 }
 /* Creating a container to stay away from margins */
 .container-right {
@@ -185,6 +185,12 @@ footer {
 .callout-text {
   font-family: var(--ff);
   font-size: 24pt;
+  color: black;
+}
+
+.customize-text {
+  font-family: var(--ff);
+  font-size: 18pt;
   color: black;
 }
 
@@ -361,10 +367,34 @@ https://www.w3schools.com/howto/howto_css_cards.asp
   margin-bottom: 4px;
 }
 
+.review-name-text {
+  font-family: var(--ff);
+  font-size: 16pt;
+  padding-bottom: 10px;
+  margin-top: 0;
+}
+
 .price-text {
   font-family: var(--ff);
   font-size: 10pt;
   text-align: center; 
+  padding-bottom: 10px;
+  margin-top: 0;
+}
+
+.more-reviews-text {
+  font-family: var(--ff);
+  color: var(--highlight-blue);
+  font-size: 10pt;
+  text-align: left; 
+  padding-bottom: 10px;
+  margin-top: 0;
+}
+
+.review-text {
+  font-family: var(--ff);
+  font-size: 10pt;
+  text-align: left; 
   padding-bottom: 10px;
   margin-top: 0;
 }
